--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -54,6 +54,15 @@
   [sxt-main-viewer] .sx-toolbar[gn-localisation-input] {
     width: 15em;
   }
+  ul.gn-resultview {
+    li.gn-grid {
+      .gn-md-relations, .gn-md-links {
+        .dropdown-menu {
+          max-width: 195px;
+        }
+      }
+    }
+  }
 
   h4 {
     display: block;
